# swarmrt

./: .gitignore  AGENT_SYSTEM.md  ARCHITECTURE.md  AUDIT_REPORT.md  BEAM_DEEP_DIVE.md  BENCHMARKS.md  CMakeLists.txt  LICENSE  Makefile  Makefile.agent  PLATFORM_PARITY.md  README.md  SWARM_V2.md  VALIDATION_REPORT.md  ai_agent_feedback.md  blog_speed_parallelism.md  erlang_bench.erl  error_test1.sw  error_test2.sw  error_test3.sw  ets_test.sw  import_main.sw  ios-toolchain.cmake  mingw-w64.cmake  my_test.sw  utils.sw
.github/workflows/: release-mcp.yml
bench/: beam_bench.erl
coder/: Makefile  coder.c  llm.c  llm.h  tools.c  tools.h
docs/: AGENT_SYSTEM.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md
examples/: ai_agent.sw  counter.sw  distributed.sw  hello.sw  lambda.sw  mapreduce.sw  math_test.sw  mathlib.sw  multi_main.sw  pingpong.sw  supervisor.sw  swarm_parallel.sw
feedback-server/: Dockerfile  README.md  fly.toml  go.mod  main.go
mcp/: README.md  autopilot_hook.sh  build-all.sh  get.sh  install.sh  swarmrt_mcp.c  swarmrt_wrap.c
src/: bench_search.c  benchmark.c  benchmark_h2h.c  benchmark_native.c  main.c  parser.c  swarmrt.c  swarmrt.h  swarmrt_agent.c  swarmrt_agent.h  swarmrt_agent_simple.h  swarmrt_arena.h  swarmrt_asm.S  swarmrt_beam.c  swarmrt_beam.h  swarmrt_builtins_studio.h  swarmrt_clipboard.c  swarmrt_clipboard.h  swarmrt_codegen.c  swarmrt_codegen.h  swarmrt_context.S  swarmrt_desktop.c  swarmrt_desktop.h  swarmrt_ets.c  swarmrt_ets.h  swarmrt_fsindex.c  swarmrt_full.c  swarmrt_full.h  swarmrt_gc.c  swarmrt_gc.h  swarmrt_hotload.c  swarmrt_hotload.h  swarmrt_http.c  swarmrt_http.h  swarmrt_io.c  swarmrt_io.h  swarmrt_lang.c  swarmrt_lang.h  swarmrt_liveview_js.h  swarmrt_native.c  (+48 more)
studio/: .gitignore  atelier.sw  live.sw  live_chat.sw  live_counter.sw  load_ltx2.py  observer.sw  patent_lab.sw  render_eden.py  render_eden_wan.py  render_hunyuan.py  render_scenes.py  research_lab.sw  video_studio.sw
swarmrt-site/: package-lock.json
tests/: MathLib.sw  import_test.sw  integration_test.sw  phase12_test.sw  phase13_test.sw  test_llm.sw
